--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:4545/megadb
 spring.datasource.username=root
 spring.datasource.password=966999
 spring.jpa.hibernate.ddl-auto=update
+server.port=8888
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
